# OtterPill-rs

./: .gitignore  README.md
adafruit-neotrellis/: Cargo.toml
adafruit-neotrellis/src/: lib.rs
adafruit-seesaw/: Cargo.toml
adafruit-seesaw/src/: lib.rs
hello-f072/: Cargo.toml
hello-f072/src/: main.rs
hello-mouse/: Cargo.toml  Makefile.toml
hello-mouse/src/: clock.rs  main.rs  trellis.rs
hello-mouse/src/script/: behaviors.rs  engine.rs  mod.rs
phm/: Cargo.toml  Makefile.toml  uart.sh
phm-cli/: Cargo.toml
phm-cli/src/: main.rs
phm-icd/: Cargo.toml
phm/.cargo/: config
phm/src/: i2c_rpc.rs  main.rs  trellis.rs  usb.rs
split-mouse/: Cargo.toml  Makefile.toml
split-mouse/src/: main.rs
vintage/: .gitignore  Cargo.toml  Makefile.toml  README.md  memory.x
vintage-cli/: Cargo.toml  log5eva.sh
vintage-cli/src/: main.rs
vintage-icd/: Cargo.toml
vintage-icd/src/: cobs_buffer.rs  lib.rs
vintage/src/: clock.rs  colors.rs  i2c_rpc.rs  main.rs  trellis.rs  usb.rs
vintage/src/script/: engine.rs
