[package]
name = "vintage-cli"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serialport = "3.3.0"
postcard = "0.4.3"
toml = "0.5.5"
structopt = "0.3.7"
chrono = { version = "0.4.10", features = ["serde"] }
serde_json = "1.0.46"

[dependencies.vintage-icd]
path = "../vintage-icd"
