[package]
name = "vintage-icd"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", default-features = false, features = ["derive"] }
generic-array = "0.13.2"
postcard = "0.4"
heapless = "0.5"
