[package]
name = "vintage"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
stm32f0xx-hal = { version = "0.15.2", features = [ "stm32f072", "rt" ] }
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32-usbd = { version = "0.4.0", features = ["stm32f072xx", "dp_pull_up_support"] }
panic-persist = "0.2.1"
usb-device = "0.2.1"
usbd-serial = "0.1"
embedded-hal = "0.2.3"
heapless = "0.5"

[dependencies.adafruit-seesaw]
version = "0.1"
path = "../adafruit-seesaw"

[dependencies.adafruit-neotrellis]
version = "0.1"
path = "../adafruit-neotrellis"

[profile.release]
lto             = true
panic           = "abort"
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 's'

[profile.dev]
lto             = true
panic           = "abort"
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 0

[patch.crates-io.stm32f0xx-hal]
path = "./vendor/stm32f0xx-hal"
