[package]
name = "vintage"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
stm32f0xx-hal = { version = "0.15.2", features = [ "stm32f072", "rt", "stm32-usbd" ] }
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32-usbd = { version = "0.5" }
panic-persist = "0.2.1"
usb-device = "0.2.1"
usbd-serial = "0.1"
embedded-hal = "0.2.3"
heapless = "0.5"
cortex-m-rtfm = "0.5"

[dependencies.adafruit-seesaw]
version = "0.1"
path = "../adafruit-seesaw"

[dependencies.adafruit-neotrellis]
version = "0.1"
path = "../adafruit-neotrellis"

[profile.release]
lto             = true
panic           = "abort"
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 's'

[profile.dev]
lto             = true
panic           = "abort"
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 0

[patch.crates-io.stm32f0xx-hal]
git = "https://github.com/stm32-rs/stm32f0xx-hal"
rev = "b15fc1532f738e06df23935446ce4bfa67b078cc"
